Set background image on body to avoid html shift on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,14 +6,13 @@
 @use "responsive";
 
 html {
-    background: url(../img/PolygonalBackground.svg) center/cover no-repeat fixed, black;
     height: 100%;
 }
 
 body {
+    background: url(../img/PolygonalBackground.svg) center/cover no-repeat fixed, rgba($color: #000000, $alpha: 0.4);
     position: relative;
-    min-height: 100%;
-    background-color: rgba($color: #000000, $alpha: 0.4);
+    height: 100%;
     color: $text-light;
     font-family: "Roboto", sans-serif;
     line-height: 1.25;
